// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text component deve conseguir renderizar [snapshot] 1`] = `
<p
  class="sc-bdVaJa hCKHIO"
>
  Texto de teste
</p>
`;

exports[`Text component deve conseguir renderizar [snapshot] como tag H1 1`] = `
<h1
  class="sc-bdVaJa hCKHIO"
>
  Texto de teste 2
</h1>
`;

exports[`Text component deve conseguir renderizar [snapshot] como tag H1 e fontSize 15px 1`] = `
<h1
  class="sc-bdVaJa dsgeoZ"
  font-size="15px"
>
  Texto de teste
</h1>
`;

exports[`Text component deve conseguir renderizar [snapshot] como warning 1`] = `
<p
  class="sc-bdVaJa irvhcf"
>
  Texto de teste
</p>
`;
